--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 <body>
   <img src="A:\images\buff.jpg"/>
+    <p>when will my life begin?</p>
   <script src="js/scripts.js"></script>
 </body>
 </html>
