--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <img src="A:\images\buff.jpg"/>
+  <img src="https://github.com/kxjjuneau/tastystylus.github.io/blob/master/buff.jpg"/>
     <p>when will my life begin?</p>
   <script src="js/scripts.js"></script>
 </body>
