--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <img src="http://imgur.com/a/KXyPm"/>
+  <img src="http://i.4cdn.org/v/1499978753853.jpg"/>
     <p>when will my life begin?</p>
   <script src="js/scripts.js"></script>
 </body>
