--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body>
   <img src="http://i.imgur.com/aJCUdQp.jpg"/>
     <p>when will my life begin?</p>
-  <script src="js/scripts.js"></script>
+    <div></div>
+    <p>lol</p>
 </body>
 </html>
