--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="site for cool kids" content="idk this is just practice">
   <meta name="jo" content="SitePoint">
     
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
-    <!--<link rel='stylesheet' type='text/css' href='http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css'/>-->
+   <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <link rel='stylesheet' type='text/css' href='http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css'/>-->
     <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/kxjjuneau/tastystylus.github.io/master/css/main.scss"/>
     <script type='text/javascript' src='jscript.js'></script>
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
@@ -23,6 +23,6 @@
   <img src="http://i.imgur.com/aJCUdQp.jpg"/>
     <p>when will my life begin?</p>
     <div></div>
-    <p>lol</p>
+    <p>lol lolololol</p>
 </body>
 </html>
