--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
     <link rel='stylesheet' type='text/css' href='http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css'/>-->
     <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/kxjjuneau/tastystylus.github.io/master/css/main.scss"/>
-    <script type='text/javascript' src='jscript.js'></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
+    <script type='text/javascript' src='https://raw.githubusercontent.com/kxjjuneau/tastystylus.github.io/master/jscrpit.js'></script>
+   <!-- <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script> -->
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
