--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <img src="http://i.imgur.com/aJCUdQp.jpg"/>
-    <p>when will my life begin?</p>
+    <p>when will my life beg</p>
     <div></div>
     <p>lol lolololol</p>
 </body>
