--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
     <link rel='stylesheet' type='text/css' href='http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css'/>-->
-    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/kxjjuneau/tastystylus.github.io/master/css/main.scss"/>
+    <link rel="stylesheet" type="text/css" href="https://raw.githubusercontent.com/kxjjuneau/tastystylus.github.io/master/css/style.css"/>
     <script type='text/javascript' src='https://raw.githubusercontent.com/kxjjuneau/tastystylus.github.io/master/jscrpit.js'></script>
    <!-- <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script> -->
 
@@ -21,7 +21,7 @@
 
 <body>
   <img src="http://i.imgur.com/aJCUdQp.jpg"/>
-    <p>when will my life beg</p>
+    <p>when will my life begin</p>
     <div></div>
     <p>lol lolololol</p>
 </body>
