--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
     <link rel='stylesheet' type='text/css' href='http://code.jquery.com/ui/1.9.1/themes/base/jquery-ui.css'/>-->
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
-    <script type='text/javascript' src='https://raw.githubusercontent.com/kxjjuneau/tastystylus.github.io/master/jscrpit.js'></script>
+   <!-- <script type='text/javascript' src='https://raw.githubusercontent.com/kxjjuneau/tastystylus.github.io/master/jscrpit.js'></script>-->
    <!-- <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script> -->
 
   <!--[if lt IE 9]>
